# blop-native

./: .gitignore  README.md  TASK.md  Taskfile.dist.yaml
client/: .eslintrc.json  .gitignore  .prettierrc  Taskfile.dist.yaml  index.html  package.json  tailwind.config.js  vite.config.ts  windi.config.ts
client/src/: App.tsx  app.scss  globals.d.ts  index.tsx
client/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
client/src-tauri/icons/: icon.icns
client/src-tauri/src/: command.rs  common.rs  events.rs  main.rs  websocket.rs
client/src-tauri/src/user/: mod.rs
client/src-tauri/src/user/auth/: mod.rs  password.rs  username.rs
client/src/components/: ThemeProvider.tsx
client/src/components/AppContainer/: AppContainer.tsx  appContainer.scss  index.ts
client/src/components/Button/: Button.tsx  button.scss  index.ts
client/src/components/Checkbox/: Checkbox.tsx  checkbox.scss
client/src/components/Header/: Header.tsx  header.scss
client/src/components/Input/: Input.tsx  input.scss  validator.ts
client/src/components/List/: List.tsx  list.scss
client/src/events/: generate-index.py
client/src/lib/: auth.tsx  commands.ts  lazy.ts  util.ts
client/src/pages/: Authorization.tsx  Game.tsx  Home.tsx  Login.tsx  Register.tsx
client/src/styles/: app.scss
server/: .dockerignore  .gitignore  Dockerfile  Taskfile.dist.yaml  auth.go  conn.go  env.go  go.mod  go.sum  main.go  mongo.go  ws.go
server/api/: api.go
server/api/auth/: auth.go
server/api/user/: user.go
server/lib/: auth.go  conn.go  env.go  mongo.go  user.go  ws.go
(+12 files in other folders)
