[package]
authors = ["JackoCoolio"]
default-run = "blop-native"
description = "The native application for Blop."
edition = "2021"
license = ""
name = "blop-native"
repository = ""
rust-version = "1.57"
version = "0.1.0"
[build-dependencies]
[build-dependencies.tauri-build]
features = []
version = "1.0.0-rc.8"

[dependencies]
futures = "0.3.21"
futures-util = "0.3.21"
serde_json = "1.0"
tokio-tungstenite = "0.17.1"
tokio = { version = "1.18.2", features = ["full"] }
url = "2.2.2"

[dependencies.serde]
features = ["derive"]
version = "1.0"

[dependencies.tauri]
features = ["api-all"]
version = "1.0.0-rc.9"

[features]
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
